--- a/app/assets/stylesheets/education.scss
+++ b/app/assets/stylesheets/education.scss
@@ -21,12 +21,13 @@
     width: 20%;
     height: 100%;
     background-color: #1c182f;
-    box-shadow: 2vh 0vh 3vh rgba(61, 61, 61, 0.137);
+    box-shadow: 2vh 0vh 3vh rgba(34, 34, 34, 0.137);
     z-index: 500;
 }
 
 .education-main-chart-item-box {
     width: 100%;
+    padding: 1.3vh 0vh 0vh 0vh;
     
 }
 
@@ -36,11 +37,13 @@
 }
 
 .chart-title {
-    margin-top:1.5vw;
-    margin-bottom:0.5vw;
-    margin-left: 2vw;
-    font-size: 3.4vh;
+    margin-left: 2vh;
+    font-size: 2.5vh;
     cursor: pointer;
+    padding-bottom: 1.3vh;
+    display: flex;
+    align-items: center;
+    
 }
 
 .education-main-chart-item {
@@ -49,14 +52,22 @@
 
 .education-main-chart-item-each {
     width: 100%;
-    height: 7vh;
+    height: 6vh;
     display: flex;
+    justify-content: flex-start;
     align-items: center;
     cursor: pointer;
+    img {
+        position:relative;
+        top:0.2vh;
+        margin-left: 3vw;
+        width: 2.5vh;
+        height: 2.5vh;
+    }
 }
 .education-main-chart-item-each h1 {
-    font-size: 2vh;
-    margin-left: 4vw;
+    font-size: 1.8vh;
+    margin-left: 0.5vw;
 }
 
 .education-main-box-content {
@@ -74,15 +85,14 @@
     top: 0;
 }
 
+
+
 .airpin {
     width: 100%;
     height: 100%;
 }
 
-#education-category {
-    
 
-}
 
 #disease {
     background: #ffe26f url("교육바탕.png") 100% 100% repeat;
@@ -270,7 +280,7 @@
 
 
 #category-1:hover, #category-2:hover, #category-3:hover, #category-4:hover,#category-5:hover,#category-6:hover {
-    background: rgb(12, 6, 34) url("블루.png") repeat;
+    background: #221c38 url("블루.png") repeat;
     h1 {
         font-size: 2.2vh;
         color: rgb(248, 255, 183);
