--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -2,45 +2,65 @@
 <div class="education-main">
     <div class="education-main-chart-box">
         <div class="education-main-chart">
+            
+            <h1 style="color:white;font-size: 3.5vh;padding:3.5vh 2vh 3.5vh 2.5vh;width:100%;display:block;background-color:#2e284d">카테고리</h1>
             <div class="education-main-chart-item-box">
-                <h1 class="chart-title" >Sex</h1>
+                
+                <h1 class="chart-title" ><img src="/assets/sex1.svg" style="position:relative;top:0.2vh;width: 3.5vh;height:3.5vh;margin-right:0.8vh;">Sex</h1>
+               
                 <div class="education-main-chart-item">
                     <div id="category-1" class="education-main-chart-item-each" onclick="move_contraception()">
+                        <img src="/assets/arrow4.svg">
                         <h1>피임</h1>
                         
                     </div>
                     <div id="category-2" class="education-main-chart-item-each"  onclick="move_disease()">
-                        <h1>성질환</h1>
+                        <img src="/assets/arrow4.svg">
+                        <h1>성병</h1>
+                    </div>
+                    <div id="category-" class="education-main-chart-item-each"  onclick="move_disease()">
+                        <img src="/assets/arrow4.svg">
+                        <h1>성생활</h1>
                     </div>
                 </div>
             </div>
             <div class="education-main-chart-item-box">
-                <h1 class="chart-title">Gender</h1>
+                <h1 class="chart-title" ><img src="/assets/gender.svg" style="position:relative;top:0.2vh;width: 4vh;height:4vh;margin-right:1vh;">Gender</h1>
                 <div class="education-main-chart-item">
                     <div id="category-3" class="education-main-chart-item-each" onclick="move_genderequality()">
+                        <img src="/assets/arrow4.svg">
                         <h1>언어</h1>
                     </div>
                     <div id="category-4" class="education-main-chart-item-each" onclick="move_media()">
+                        <img src="/assets/arrow4.svg">
                         <h1>미디어</h1>
+                    </div>
+                     <div id="category-" class="education-main-chart-item-each" onclick="move_media()">
+                        <img src="/assets/arrow4.svg">
+                        <h1>데이트</h1>
                     </div>
                 </div>
             </div>
             <div class="education-main-chart-item-box">
-                <h1 class="chart-title">Others</h1>
+                <h1 class="chart-title" ><img src="/assets/media.svg" style="position:relative;top:0.2vh;width: 3vh;height:3vh;margin-right: 1vh;">Media</h1>
                 <div class="education-main-chart-item">
                     <div id="category-5" class="education-main-chart-item-each" onclick="move_reference()">
+                        <img src="/assets/arrow4.svg">
                         <h1>참고</h1>
                     </div>
                     <div id="category-6" class="education-main-chart-item-each"  onclick="move_qna()">
+                        <img src="/assets/arrow4.svg">
                         <h1>Q&A</h1>
                     </div>
-                    <div class="education-main-chart-item-each">
-                        <h1></h1>
+                    <div id="category-" class="education-main-chart-item-each"  onclick="move_qna()">
+                        <img src="/assets/arrow4.svg">
+                        <h1>커뮤니티</h1>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    
     <div class="education-main-box-content">
         <div id="pin-1" class="airpin">
             <div id="disease" class="education-main-box">
@@ -81,49 +101,72 @@
 
 <script>
 
-    var scroll_position;
-    $("body").css({"overflow-x": "hidden"})
-    window.onload =function() {
-    window.scrollTo(0,0);
+    scroll_position =  $(window).scrollTop();
+    if (scroll_position ==0) {
+        $("#category-1").css({"background-color":"black"});
     }
-   
+    $("body").css({"overflow-x": "hidden"})
     
     $(window).scroll(function() {
         scroll_position =  $(window).scrollTop();
         if ($("#pin-1").length) {
-
             if (scroll_position >= $("#pin-1").offset().top && scroll_position  < $("#pin-2").offset().top-$(".nav").height()) {
+                
                 $("#disease").css({"position":"fixed"});
-                $("#category-1").css({"background-color":"black"});
+                $("#category-1").css({"background-color":"#292445"});
+                $("#category-1").parent().css({"background-color":"#211d38 "});
+                $("#category-3").parent().css({"background-color":"initial "});
+                $("#category-1").parent().parent().css({"background-color":"#25203e "});
+                $("#category-3").parent().parent().css({"background-color":"initial"});
                 $("#category-2").css({"background-color":"transparent"});
                 $("#contraception").css({"position":"relative", top: "0"});
             } else if (scroll_position > $("#pin-2").offset().top-$(".nav").height() && scroll_position  < $("#pin-3").offset().top-$(".nav").height()) {
                 $("#contraception").css({"position":"fixed", top: "9vh"});
-                $("#category-2").css({"background-color":"black"});
+                $("#category-2").css({"background-color":"#292445"});
                 $("#category-1").css({"background-color":"transparent"});
                 $("#category-3").css({"background-color":"transparent"});
+                $("#category-1").parent().css({"background-color":"#211d38 "});
+                $("#category-3").parent().css({"background-color":"initial "});
+                $("#category-1").parent().parent().css({"background-color":"#25203e "});
+                $("#category-3").parent().parent().css({"background-color":"initial"});
                 $("#genderequality").css({"position":"relative",top: "0"});
             }  else if (scroll_position > $("#pin-3").offset().top-$(".nav").height() && scroll_position < $("#pin-4").offset().top-$(".nav").height()) {
                 $("#genderequality").css({"position":"fixed", top: "9vh"});
-                $("#category-3").css({"background-color":"black"});
+                $("#category-3").css({"background-color":"#292445"});
                 $("#category-2").css({"background-color":"transparent"});
                 $("#category-4").css({"background-color":"transparent"});
+                $("#category-3").parent().css({"background-color":"#211d38 "});
+                $("#category-1").parent().css({"background-color":"initial "});
+                $("#category-5").parent().css({"background-color":"initial "});
+                $("#category-3").parent().parent().css({"background-color":"#25203e "});
+                $("#category-1").parent().parent().css({"background-color":"initial"});
+                $("#category-5").parent().parent().css({"background-color":"initial"});
                 $("#media").css({"position":"relative",top: "0"});
             } else if (scroll_position >= $("#pin-4").offset().top-$(".nav").height() && scroll_position < $("#pin-5").offset().top-$(".nav").height()) {
                 $("#media").css({"position":"fixed", top: "9vh"});
-                $("#category-4").css({"background-color":"black"});
+                $("#category-4").css({"background-color":"#292445"});
                 $("#category-3").css({"background-color":"inherit"});
                 $("#category-5").css({"background-color":"inherit"});
+                $("#category-3").parent().css({"background-color":"#211d38 "});
+                $("#category-1").parent().css({"background-color":"initial "});
+                $("#category-5").parent().css({"background-color":"initial "});
+                $("#category-3").parent().parent().css({"background-color":"#25203e "});
+                $("#category-1").parent().parent().css({"background-color":"initial"});
+                $("#category-5").parent().parent().css({"background-color":"initial"});
                 $("#reference").css({"position":"relative",top: "0"});
             } else if (scroll_position >= $("#pin-5").offset().top-$(".nav").height() && scroll_position < $("#pin-6").offset().top-$(".nav").height()) {
                 $("#reference").css({"position":"fixed", top: "9vh"});
-                $("#category-5").css({"background-color":"black"});
+                $("#category-5").css({"background-color":"#292445 "});
+                $("#category-5").parent().parent().css({"background-color":"#25203e "});
+                $("#category-3").parent().parent().css({"background-color":"initial"});
+                $("#category-5").parent().css({"background-color":"#211d38 "});
+                $("#category-3").parent().css({"background-color":"initial "});
                 $("#category-4").css({"background-color":"inherit"});
                 $("#category-6").css({"background-color":"inherit"});
                 $("#qna").css({"position":"relative",top: "0"});
             } else if (scroll_position >= $("#pin-6").offset().top-$(".nav").height()) {
                 $("#qna").css({"position":"fixed", top: "9vh"});
-                $("#category-6").css({"background-color":"black"});
+                $("#category-6").css({"background-color":"#292445 "});
                 $("#category-5").css({"background-color":"transparent"});
             }
 
