--- a/app/views/education/genderequality.html.erb
+++ b/app/views/education/genderequality.html.erb
@@ -1,1 +1,4 @@
-<h1>젠더평등</h1>
+<div class="education-gend">
+<img src="/assets/whale1.gif" style="width: 400px; height: 400px;">
+<h1>콘텐츠 준비중</h1>
+</div>
