--- a/app/assets/stylesheets/education.scss
+++ b/app/assets/stylesheets/education.scss
@@ -114,6 +114,7 @@
     img {
         width: 26vh;
         height: 28vh;
+        background-color: #ffe26f;
     }
     button {
         margin-top: 0.5vh;
@@ -148,6 +149,7 @@
         width: 34vh;
         height: 26vh;
         margin-top: 3vh;
+        background-color: #f3825f;
     }
     button {
         margin-top: 4vh;
