--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -42,7 +42,7 @@
     top: 0;
     margin-top: 20vh;
     margin-bottom: 20vh;
-    left: 25vw;
+    left: 23vw;
     width:70vw;
     height: 200vh;
     background-color: rgb(245, 245, 245);
@@ -50,6 +50,23 @@
     box-shadow: 3vh 4vh 8vh rgba(19, 1, 1, 0.342);
 }
 
+.post-index-container-top {
+    width: 100%;
+    height: 5vw;
+}
+
+.post-index-container-search {
+    width: 100%;
+    height: 4vw;
+}
+
+.post-index-container-table {
+    width: 100%;
+    height: 10vw;
+}
+
 .post-index-container-box {
     width: 100%;
+    text-align: center;
 }
+
