--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,44 +6,46 @@
         <h1>Jang Young Jae</h1>
         <h1>I am the one!</h1>
   </div>
-
   <div class="post-index-container">
     <div class="post-index-container-top">
-      <h1>Posts</h1>
-       <%= link_to 'New Post', new_post_path %>
+      <div style="display:flex;align-items:center;">
+        <h1 style="font-size: 6vh">커뮤니티</h1>
+        <h2 style="font-size: 3vh">Main</h1>
+      </div>
+      <div class="post-search" style="">
+        <h1>검색 :</h1>
+        
+        <input id = "myInput" type = "text" placeholder = "Search..">
+      </div>
     </div>
-    <div class="post-index-container-table">
-      <thead>
-          <tr>
-            <th>학습게시판</th>
-            <th>연애</th>
-            <th></th>
-            <th>젠더</th>
-            <th></th>
-          </tr>
-      </thead>
-     
+    <div class="post-index-container-top2">
+      <div style="display:Flex;">
+      <h1 class="category-name" style="background-color: rgb(78, 11, 11);color:white;">메인</h1>
+      <h1 class="category-name">연애</h1>
+      <h1 class="category-name">성고민</h1>
+      <h1 class="category-name">성생활</h1>
+      </div>
+      <%= link_to '새글쓰기', new_post_path, :class => "new-post" %> 
     </div>
-    <div class="post-index-container-search">
-      <input id = "myInput" type = "text" placeholder = "Search..">
-    </div>
+    
+    
     <table class="post-index-container-box">
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Content</th>
-          <th colspan="3">접속</th>
+        <tr class="tr1">
+          <th class="td1">Title</th>
+          <th class="td2">Content</th>
+          <th class="td3">접속</th>
+          <th class="td4">접속</th>
+          <th class="td5">접속</th>
         </tr>
-      </thead>
 
       <tbody id = "myTable">
         <% @posts.each do |post| %>
-          <tr>
-            <td><%= post.title %></td>
-            <td><%= post.content %></td>
-            <td><%= link_to 'Show', post %></td>
-            <td><%= link_to 'Edit', edit_post_path(post) %></td>
-            <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <tr class="tr2">
+            <td class="td1"><%= post.title %></td>
+            <td class="td2"><%= post.content %></td>
+            <td class="td3"><%= link_to 'Show', post %></td>
+            <td class="td4"><%= link_to 'Edit', edit_post_path(post) %></td>
+            <td class="td5"><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
         <% end %>
       </tbody>
