--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="education-main-chart-item-box">
-                <h1 class="chart-title" ><img src="/assets/etc.svg" style="position:relative;top:0.2vh;width: 3vh;height:3vh;margin-right: 1.6vh;margin-left:0.5vh">Etc.</h1>
+                <h1 class="chart-title" ><img src="/assets/etc.svg" style="position:relative;top:0.2vh;width: 3vh;height:3vh;margin-right: 1.6vh;margin-left:0.5vh">Etc</h1>
                 <div class="education-main-chart-item">
                     <div id="category-5" class="education-main-chart-item-each" onclick="move_reference()">
                         <img src="/assets/arrow4.svg">
@@ -94,7 +94,7 @@
         </div>
         <div id="pin-6" class="airpin">
             <div id="qna"  class="education-main-box">
-                <img src="/assets/banana.gif">
+               
             </div>
         </div>
     </div>
