--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,13 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.post-new, .post-show {
-    width: 100%;
-    height: 100%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .post-index {
     padding-top: 9vh;
@@ -41,7 +34,7 @@
     top: 0;
     margin-top: 20vh;
     margin-bottom: 10vh;
-    padding: 0 2vh 0 2vh;
+    padding: 0 2vh 4vh 2vh;
     left: 23vw;
     width:70vw;
     min-height: 70vh;
@@ -133,9 +126,81 @@
 }
 
 
+//post-show
+.post-show-content {
+    width: 100%;
+    min-height: 40vh;
+    padding: 0 4vh 0 4vh;
+}
 
 
+.post-show-new-comment {
+    width: 100%;
+    min-height: 5vh;
+    padding: 0 4vh 0 4vh;
+    display:flex;
+    justify-content: space-between;
+    #comment_content {
+        width: 85%;
+        height: 2.5vw;
+        border:none;
+        border-radius:0.5vh;
+    }
+    .post-show-new-comment-input {
+        height: 2.5vw;
+        width: 13%;
+        background-color:  rgb(219, 143, 43);
+        border:none;
+        border-radius:0.5vh;
+        color: white;
+        font-size: 2vh;
+        box-shadow: 0.5vh 0.5vh 1vh rgba(48, 48, 48, 0.048);
+    }
+}
 
+.post-show-comments {
+    width: 100%;
+    min-height:4vh;
+    padding: 1vh 4vh 0 4vh;
+    display: flex;
+    align-items:  center;
+    justify-content: space-between;
+    
+    h1 {
+        padding-left: 1vh;
+        width: 85%;
+        font-size: 2vh;
+        border-bottom: 1px solid rgb(233, 233, 233);
+    }
+    a {
+        width: 13%;
+        font-size: 2vh;
+    }
+}
+
+.post-edit-title {
+    width: 100%;
+    padding: 0 4vh 0 4vh;
+    margin-bottom: 4vh;
+    
+    input {
+        width: 100%;
+        border: none;
+        height: 4vh;
+    }
+    textarea {
+        width: 100%;
+        height: 40vh;
+        border: none;
+    }
+    input[type=submit] {
+        width: 15vh;
+        height: 5vh;
+        margin-top: 4vh;  
+        font-size: 2vh;
+        box-shadow: 1vh 1vh 2vh rgba(63, 63, 63, 0.041); 
+    }
+}
 .post-new {
 
 }
