--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,17 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :post_title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.text_area :content, id: :post_content %>
-  </div>
-
-  <div class="actions">
+  
+    <div class="post-edit-title" >
+      <%= form.text_field :title, id: :post_title %>
+    </div>
+    <div class="post-edit-title" style="display:flex;flex-direction:column;align-items:center;;">
+      <%= form.text_area :content, id: :post_content %>
     <%= form.submit %>
-  </div>
+    </div>
+    
+    
+
 <% end %>
