--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
   <p id="notice"><%= notice %></p>
   <div class="post-index-profile">
         <img class="post-index-profile-img" src="/assets/banana.gif">
-        <h1>Jang Young Jae</h1>
+        <h1 class="post-username" >Jang Young Jae</h1>
         <h1>I am the one!</h1>
   </div>
   <div class="post-index-container">
