--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -4,28 +4,111 @@
 
 
 
-.post-index {
-    padding-top: 9vh;
-}
 
 .post-index-profile {
-    width: 20vw;
-    height: 90vh;
+    width: 23vw;
+    
     display:flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    
+  
 }
 
 .post-index-profile h1 {
     color: white;
 }
 
+.post-index-profile-box {
+    width: 15vw;
+    min-height:20vh;
+    background-color: rgb(248, 248, 248);
+    border-radius: 0.5vh;
+    margin-top: 4vh;   
+    padding: 2vh;
+    margin-bottom: 3vh;
+    box-shadow: 2vh 3vh 5vh rgba(19, 1, 1, 0.342);
+    h1 {
+        color: black;
+        font-size: 2vh;
+    }
+    .popular {
+        display: flex;
+        margin-left: 1vh;
+        h1 {
+            margin-right: 1vh;
+        }
+    }
+}
+
+.post-username {
+    margin-top:2vh;
+    font-weight:500;
+    font-size: 2vw; 
+}
+
+.post-index-popular {
+    width: 100%;
+    display:flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(182, 182, 182);
+    margin-bottom:2vh;
+    h1 {
+        font-size: 2.5vh;
+        color: black;
+    }
+    img {
+        width: 2vw;
+        height: 2vw;
+        position:relative;
+        top:-0.3vh;
+    }
+}
+
+
 .post-index-profile-img {
     width: 15vw;
     height: 15vw;
     border-radius:0.5vh;
+    box-shadow: 2vh 3vh 5vh rgba(19, 1, 1, 0.342);
+    margin-top:20vh;
+}
+
+.post-index-celebrate {
+    width: 15vw;
+    height:4vw;
+    background-color: rgb(248, 248, 248);
+    border-radius: 0.5vh;
+    margin-top: 2vh;   
+    padding: 2vh;
+    box-shadow: 2vh 3vh 5vh rgba(19, 1, 1, 0.342);
+    display:flex;
+    align-items: center;
+    img {
+        width: 4vh;
+        height: 4vh;
+        border-radius:50%;
+        margin-right: 1vh;
+    }
+    .post-index-celebrate-content {
+        h1 {
+
+            color: black;
+            font-size: 2vh;
+        }
+        h2 {
+            font-size: 1.7vh;
+        }
+    }
+}
+
+.post-index-menu {
+    width: 15vw;
+    height: 8vw;
+    background-color: rgb(248, 248, 248);
+    margin-top: 4vh;
+    border-radius:0.5vh;
+    padding: 2vh;
     box-shadow: 2vh 3vh 5vh rgba(19, 1, 1, 0.342);
 }
 
@@ -37,8 +120,8 @@
     padding: 0 2vh 4vh 2vh;
     left: 23vw;
     width:70vw;
-    min-height: 70vh;
-    background-color: rgb(245, 245, 245);
+    min-height: 150vh;
+    background-color: rgb(248, 248, 248);
     border-radius:0.5vh;
     box-shadow: 3vh 4vh 8vh rgba(19, 1, 1, 0.342);
 
