--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
   <p id="notice"><%= notice %></p>
   <div class="post-index-profile">
         <img class="post-index-profile-img" src="/assets/banana.gif">
-        <h1>Jang Young Jae</h1>
+        <h1 class="post-username" >Jang Young Jae</h1>
         <h1>I am the one!</h1>
   </div>
   <div class="post-index-container">
@@ -13,13 +13,14 @@
         <h2 style="font-size: 3vh">새글쓰기</h1>
       </div>
       <div class="post-search" style="">
+       <%= link_to 'Back', posts_path %>
         <h1>뒤로 가기</h1>
       </div>
     </div>
   
     <%= render 'form', post: @post %>
 
-    <%= link_to 'Back', posts_path %>
+   
         
   </div>
 </div>
