--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -10,7 +10,27 @@
         display: none;
     }
 </style>
-<%=@user = User.all%>
-<%@user.each do |post| %>
-<h1><%=post.email%></h1>
-<%end%>
+
+
+<div class="user">
+    <Div class="user-profile">
+        <img class="user-profile-backimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpT4gWWo0FlogOO-Jl5uE-NKaRBoRrjznhA3yHR-PUlk7ae7afXQ">
+        
+        
+        <div class="user-profile-content">
+            <h1><%=if current_user.age ==nil then "18"  else current_user.age end%></h1>
+            
+            <h2><%=if current_user.age ==nil then "Young Jae"  else current_user.sumnail end%></h2>
+            <h3><%=if current_user.age ==nil then "norrard@naver.com"  else current_user.email end%></h3>
+        
+        
+        </div>
+        <div class="user-profile-content-box">
+            <div class="modi">
+                <h1>Settings</h1>
+            </div>
+            <div class="like">
+            </div>
+        </div>
+
+</div>
