--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,30 +42,35 @@
       </div>
       <div class="nav-menu-box">
           <a class="nav-menu" href="/">
-            <img src="/assets/main.svg" style="top:-0.3vh;">
+            <img src="/assets/main.svg">
             <h1>Main</h1>
           </a>
           <a class="nav-menu" href="/education/index">
             <img src="/assets/book.svg">
             <h1>Education</h1>
           </a>
-          <a class="nav-menu" href="/posts" style="left:1vh">
+          <a class="nav-menu" href="/posts" >
             <img src="/assets/community1.svg" style="top:0vh;height: 6.5vh;">
             <h1 style="top:-2.3vh">Community</h1>
           </a>
-           <a class="nav-menu" href="/counsel/index" style="left:1.5vh;">
+           <a class="nav-menu" href="/counsel/index" >
             <img src="/assets/counsel.svg" style="top:-0.2vh;height:5.2vh">
             <h1 style="top:-1.4vh">Counsel</h1>
           </a>
           <% if user_signed_in? %>
-            <%= link_to destroy_user_session_path, method: :delete, :class => "nav-menu" do%>    
-              <img src="/assets/account.svg">
-              <h1>Logout</h1>
+          
+            <a class="nav-menu" href="/user/index" >
+              <img src="/assets/account.svg" style="top:0vh;height:4vh">
+              <h1 style="top:-0.8vh">Account</h1>     
+            </a>
+            <%= link_to destroy_user_session_path, method: :delete, :class => "nav-menu" do%>
+              <img src="/assets/logout.svg" style="top:0vh;height:4vh">
+              <h1 style="top:-0.8vh">Logout</h1>   
             <%end%>
           <% else %>
            <a class="nav-menu" href="/users/sign_in" >
-            <img src="/assets/account.svg">
-            <h1>Login</h1>     
+            <img src="/assets/account.svg" style="top:0vh;height:4vh">
+            <h1 style="top:-0.8vh">Login</h1>     
           </a>
           <% end %>
       </div>
