--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -13,8 +13,8 @@
 
 
 <div class="user">
-    <Div class="user-profile">
-        <img class="user-profile-backimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpT4gWWo0FlogOO-Jl5uE-NKaRBoRrjznhA3yHR-PUlk7ae7afXQ">
+    <div class="user-profile">
+        <img class="user-profile-backimg" src="https://mediaslide-europe.storage.googleapis.com/eastwest/pictures/2038/8528/large-1511786157-bdf535c0ed070ecb167f0936503bd22a.jpg">
         
         
         <div class="user-profile-content">
@@ -30,7 +30,20 @@
                 <h1>Settings</h1>
             </div>
             <div class="like">
+            <img src="/assets/heart.svg">
             </div>
         </div>
-
+    </div>
+    <div class="user-profile-action">
+    </div>
+    <div class="user-profile-mypost">
+    </div>
+    <div class="user-profile-tagpost">
+    </div>
 </div>
+
+
+<script>
+  $("body").css({"background-color": "rgb(100, 33, 33)"});
+
+  </script>
