--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,10 +53,11 @@ a {
     background-color: white;
     z-index: 999;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     box-shadow: 0vh 0vh 4vh #2929293d;
-    overflow:hidden;    
+    overflow:hidden;   
+    padding: 0 14vw 0 14vw; 
 }
 
 .logo {
@@ -79,7 +80,7 @@ a {
 }
 
 .nav-menu-box {
-    width: 28%;
+    
     height:100%;
     display: flex;
     flex-direction: row;
@@ -98,6 +99,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 0.7vw 0 0.7vw;
 }
 
 .nav-menu img {
