--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,7 +1,6 @@
 .user {
     width: 100%;
     height: 100%;
-    background-color: rgb(107, 33, 89);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,12 +8,12 @@
 }
 
 .user-profile {
-    width: 32vh;
-    height: 55vh;
-    background-color: white;
+    width: 16.5vw;
+    height: 30vw;
     border-radius: 0.5vh;
     overflow: hidden;
     position: absolute;
+    left: 14vw;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +26,6 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background: rgb(255, 255, 255);
     z-index:0;
     
 }
@@ -48,7 +46,6 @@
     width: 10vh;
     height: 10vh;
     border-radius: 50%;
-    background:rgb(93, 22, 22);
 }
 
 .user-profile-content {
@@ -70,7 +67,7 @@
         color:white;
     }
     h3 {
-        margin-top:0.5vh;
+        margin-top:0.7vh;
         font-size: 1.5vh;
         color:white;
     }
@@ -91,6 +88,16 @@
         height: 4.5vh;
         border:0.2vh solid rgba(255, 255, 255, 0.24);
         border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        img {
+            position: relative;
+            top:0.5vh;
+            width: 3vh;
+            height:3vh;
+        }
     }
 }
 .modi {
@@ -110,3 +117,52 @@
     }
    
 } 
+/*user-profile-action*/
+.user-profile-action {
+    width: 50vw;
+    height: 30vw;
+    border-radius: 0.5vh;
+    overflow: hidden;
+    position: absolute;
+    right: 14vw;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    box-shadow: 1vh 2vh 2vh rgba(0, 0, 0, 0.192);
+    background: rgb(245, 245, 245);
+}
+
+.user-profile-mypost {
+    width: 34vw;
+    height: 30vw;
+    border-radius: 0.5vh;
+    overflow: hidden;
+    position: absolute;
+    right: 14vw;
+    top:45vw;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    box-shadow: 1vh 2vh 2vh rgba(0, 0, 0, 0.192);
+    background: rgb(245, 245, 245);
+
+}
+
+.user-profile-tagpost {
+    width: 34vw;
+    height: 30vw;
+    border-radius: 0.5vh;
+    overflow: hidden;
+    position: absolute;
+    left: 14vw;
+    top:45vw;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    box-shadow: 1vh 2vh 2vh rgba(0, 0, 0, 0.192);
+    background: rgb(245, 245, 245);
+    margin-bottom: 6vw;
+}
