--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,7 +21,10 @@
         <h1 style="margin-right: 0">뒤로 가기</h1>
       </div>
     </div>
-    
+   
+    <%=@post.in = @post.in + 1%>
+    <%@post.save%>
+
     <div class="post-show-content">
       <h1><%= @post.title %></h>
       <h1><%= @post.content %></h1>
@@ -34,6 +37,7 @@
     <%@post.comments.each do |comment|%>
     <div class="post-show-comments">
         <h1><%=comment.content%></h1>
+        <h1><%@usernumber=comment.user_id.to_i()%><%user=User.find_by_id(@usernumber)%><%=user.email%></h1>
         <%=link_to '삭제', post_comment_path(@post.id, comment.id), method:'delete'%>
     </div>
     <% end%>
