--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,8 +7,8 @@
   <p id="notice"><%= notice %></p>
   <div class="post-index-profile">
         <img class="post-index-profile-img" src="/assets/banana.gif">
-        <h1 class="post-username" >Jang Young Jae</h1>
-        <h1>I am the one!</h1>
+        <h1 class="post-username" ><%=User.find_by_id(current_user.id).email%></h1>
+        <h1>환영합니다!</h1>
   </div>
   <div class="post-index-container">
     <div class="post-index-container-top">
@@ -17,9 +17,8 @@
         <h2 style="font-size: 3vh">수정하기</h1>
       </div>
       <div class="post-search" style="">
-        <%= link_to 'Show', @post %> 
-        <%= link_to 'Back', posts_path %>   
-        <h1>뒤로 가기</h1>
+        <%= link_to '메인으로', @post %>    
+        
       </div>
     </div>
   
