--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -77,7 +77,7 @@
         <div id="pin-3" class="airpin">
             <div id="genderequality"  class="education-main-box">
                 <img src="/assets/젠더.png">
-                <button>싸운 이유 보기!</button>
+                <a href="/education/genderequality"> <button>싸운 이유 보기!</button></a>
             </div>
         </div>
          <div id="pin-4" class="airpin">
