--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
   <p id="notice"><%= notice %></p>
   <div class="post-index-profile">
         <img class="post-index-profile-img" src="/assets/banana.gif">
-        <h1 class="post-username" ><%=User.find_by_id(current_user.id).email%></h1>
+        <h1 class="post-username" ><%=if user_signed_in? then User.find_by_id(current_user.id).email end%></h1>
         <h1>환영합니다!</h1>
   </div>
   <div class="post-index-container post-show">
@@ -33,7 +33,7 @@
     <span class="likebtn-wrapper" style="margin-left:3%; margin-bottom:3%;" data-theme="custom" data-icon_l="hrt1" data-icon_d="sml3-u" data-icon_l_c="#ffd5d8" data-icon_l_c_v="#fb053e" data-icon_d_c_v="#080089" data-lang="ko" data-identifier="likey_likelion"></span>
     <script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
 
-  <a target="_blank"><img src="http://www.cutercounter.com/hit.php?id=23868&nd=6&style=27" border="0" alt="hit counter"></a>
+    <%# <a target="_blank"><img src="http://www.cutercounter.com/hit.php?id=23868&nd=6&style=27" border="0" alt="hit counter"></a> %>
 
     <%=form_for Comment.new, url:post_comments_path(@post.id), :html =>{:class=> "post-show-new-comment"} do |f|%>
     <%=f.text_field :content%>
