--- a/app/views/counsel/index.html.erb
+++ b/app/views/counsel/index.html.erb
@@ -1,7 +1,7 @@
 <!-- Channel Plugin Scripts -->
 <script>
   ;window.channelPluginSettings = {
-    "pluginKey": ENV(PLUGIN_KEY) //please fill with your plugin key
+    "pluginKey": ENV(ceb26bc2-77a5-4411-bf5f-e25f2605063b) //please fill with your plugin key
   };
   (function() {
     var w = window;
