--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -12,9 +12,8 @@
                     <div id="category-1" class="education-main-chart-item-each" onclick="move_contraception()">
                         <img src="/assets/arrow4.svg">
                         <h1>피임</h1>
-                        
                     </div>
-                    <div id="category-2" class="education-main-chart-item-each"  onclick="move_disease()">
+                    <div id="category-2" class="education-main-chart-item-each"  onclick="move_disease()" >
                         <img src="/assets/arrow4.svg">
                         <h1>성병</h1>
                     </div>
@@ -71,7 +70,9 @@
        <div id="pin-2" class="airpin">
             <div id="contraception" class="education-main-box">
                 <img src="/assets/고민.png">
+                <a href="/education/venereal">
                 <button>성병 진단하기!</button>
+                </a>
             </div>
        </div>
         <div id="pin-3" class="airpin">
@@ -182,6 +183,7 @@
      function move_disease() {
     var offset = $("#pin-2").offset().top-$(".nav").height();
     $('html, body').animate({scrollTop : offset}, 800);
+
     }
      function move_genderequality() {
     var offset = $("#pin-3").offset().top-$(".nav").height();
